--- a/changeroom2.html
+++ b/changeroom2.html
@@ -33,7 +33,7 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 6px 10px; /* vertical and horizontal gap */
+      gap: 6px 10px;
       justify-items: center;
       margin-bottom: 20px;
     }
@@ -44,16 +44,16 @@
 
     .image-box {
       position: relative;
-      width: 140px; /* increased width */
+      width: 140px;
       height: 180px;
-	  padding:10px;    }
+      padding: 10px;
+    }
 
     .image-box img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border: 1px solid #000;
-	  
     }
 
     .step-number {
@@ -71,41 +71,40 @@
     .footer {
       font-size: 18px;
       font-weight: bold;
-      margin-top: 30px; /* added spacing above footer */
+      margin-top: 30px;
       text-align: left;
-	  margin-left: 22px;
+      margin-left: 22px;
     }
   </style>
 </head>
 <body>
 
-  <h1 class="footer" >Annexure – 1: Gents Change Room Pictorial Diagram</h1>
-
+  <h1 class="footer">Annexure – 1: Ladies Change Room Pictorial Diagram</h1>
   <h1>ENTRY</h1>
+
   <div class="grid">
-    <!-- ENTRY Steps 1–12 -->
-    <div class="image-box"><img src="https://i.ibb.co/rn32bSJ/Whats-App-Image-2025-07-03-at-21-35-25-21c0ebb1.jpg"><div class="step-number">1</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/HppTBjcw/Whats-App-Image-2025-07-03-at-21-35-39-6833cda2.jpg"><div class="step-number">2</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/PGvBSCMQ/Whats-App-Image-2025-07-04-at-20-04-36-22d0062b.jpg"><div class="step-number">3</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/wZcw013G/Whats-App-Image-2025-07-03-at-21-36-09-e2938bb0.jpg"><div class="step-number">4</div></div>
+    <!-- ENTRY Steps 1–11 -->
+    <div class="image-box"><img src="https://i.ibb.co/9HjsycPp/Whats-App-Image-2025-07-04-at-22-02-14-78b25263.jpg"><div class="step-number">1</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/y704Np5/Whats-App-Image-2025-07-04-at-22-02-13-41f500b1.jpg"><div class="step-number">2</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/qFs7DrVL/Whats-App-Image-2025-07-04-at-22-02-15-1f1ff937.jpg"><div class="step-number">3</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/d3TqRC4/Whats-App-Image-2025-07-04-at-22-02-15-52ed570e.jpg"><div class="step-number">4</div></div>
 
-    <div class="image-box"><img src="https://i.ibb.co/hRVHwXZj/Whats-App-Image-2025-07-04-at-20-06-45-f53f027d.jpg"><div class="step-number">5</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/4RXSmMRv/Whats-App-Image-2025-07-03-at-21-36-34-1e280176.jpg"><div class="step-number">6</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/6776KcXS/Whats-App-Image-2025-07-03-at-21-36-56-eded9059.jpg"><div class="step-number">7</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/8qvMJ0Y/Whats-App-Image-2025-07-03-at-21-37-17-170e8a4f.jpg"><div class="step-number">8</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/bRb0CWtL/Whats-App-Image-2025-07-04-at-22-02-16-4d6eb473.jpg"><div class="step-number">5</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/gLTr4q3K/Whats-App-Image-2025-07-04-at-22-02-16-e29f4931.jpg"><div class="step-number">6</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/fVcv2DcD/Whats-App-Image-2025-07-04-at-22-02-17-700d035f.jpg"><div class="step-number">7</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/mrFrTxkm/Whats-App-Image-2025-07-04-at-22-02-18-857a829a.jpg"><div class="step-number">8</div></div>
 
-    <div class="image-box"><img src="https://i.ibb.co/JF7WzrVh/Whats-App-Image-2025-07-03-at-21-37-50-52cf3833.jpg"><div class="step-number">9</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/pYVQncd/Whats-App-Image-2025-07-04-at-08-36-00-fda6063f.jpg"><div class="step-number">10</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/0RJhRNXL/Whats-App-Image-2025-07-03-at-21-38-08-336ec178.jpg"><div class="step-number">11</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/spH4hkpy/Whats-App-Image-2025-07-03-at-21-38-46-0475420e.jpg"><div class="step-number">12</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/39XbZhpM/Whats-App-Image-2025-07-04-at-22-02-18-25a2933c.jpg"><div class="step-number">9</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/21VQDFGK/Whats-App-Image-2025-07-04-at-22-02-19-93fe9459.jpg"><div class="step-number">10</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/wFLp0RJS/Whats-App-Image-2025-07-04-at-22-02-19-8b96fd5b.jpg"><div class="step-number">11</div></div>
   </div>
 
   <h1>EXIT</h1>
   <div class="grid exit-grid">
     <!-- EXIT Steps 1–3 -->
-    <div class="image-box"><img src="https://i.ibb.co/XkkfxF4c/Whats-App-Image-2025-07-03-at-21-39-36-d0f66b8d.jpg"><div class="step-number">1</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/JWQtBkKf/Whats-App-Image-2025-07-03-at-21-39-52-64e94c8b.jpg"><div class="step-number">2</div></div>
-    <div class="image-box"><img src="https://i.ibb.co/rfbz1wSj/Whats-App-Image-2025-07-03-at-21-40-05-5950dd74.jpg"><div class="step-number">3</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/fdswW6tY/Whats-App-Image-2025-07-04-at-22-33-37-56315277.jpg"><div class="step-number">1</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/GvWv0nQh/Whats-App-Image-2025-07-04-at-22-33-37-9a22829a.jpg"><div class="step-number">2</div></div>
+    <div class="image-box"><img src="https://i.ibb.co/B5CMDz53/Whats-App-Image-2025-07-04-at-22-33-37-f4e4d635.jpg"><div class="step-number">3</div></div>
   </div>
 
   <div class="footer">
